--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
 
     <main class="to-do">
         <section class="to-do__new">
-            <input type="checkbox" class="to-do__button" id="addTask">
+            <input type="radio" class="to-do__button" id="addTask">
             <input type="text" class="to-do__input" id="input" placeholder="Create a new to-do...">
         </section>
 
         <ul class="to-do__list">
             <li>
-                <input type="checkbox" class="to-do__button" id="checkbox">
+                <input type="radio" class="to-do__button" id="checkbox">
                 <span class="to-do__task" id="task"></span>
                 <button class="to-do__clear-task" id="clearTask">
                     <img src="./assets/images/icon-cross.svg" alt="Close icon" class="to-do__clear-task--icon">
