--- a/index.html
+++ b/index.html
@@ -20,19 +20,21 @@
 </head>
 
 <body>
-    <header>
+    <!-- <header>
         <h1 class="title">Todo</h1>
         <button class="thema__switch" id="switch">
             <img src="./assets/images/icon-sun.svg" alt="Sun icon" class="thema__icon">
         </button>
-    </header>
+    </header> -->
 
     <main class="to-do">
         <section class="to-do__new">
-            <input type="radio" class="to-do__button" id="addTask">
+            <label for="addTask" class="to-do__label">
+                <input type="radio" class="to-do__button" id="addTask">
+            </label>
             <input type="text" class="to-do__input" id="input" placeholder="Create a new to-do...">
         </section>
-
+        <!-- 
         <ul class="to-do__list">
             <li>
                 <input type="radio" class="to-do__button" id="checkbox">
@@ -63,4 +65,4 @@
     </footer>
 </body>
 
-</html>
+</html> -->
