--- a/index.html
+++ b/index.html
@@ -20,43 +20,80 @@
 </head>
 
 <body>
-    <!-- <header>
+    <header>
         <h1 class="title">Todo</h1>
         <button class="thema__switch" id="switch">
             <img src="./assets/images/icon-sun.svg" alt="Sun icon" class="thema__icon">
         </button>
-    </header> -->
+    </header>
 
     <main class="to-do">
         <section class="to-do__new">
-            <label for="addTask" class="to-do__label">
-                <input type="radio" class="to-do__button" id="addTask">
-            </label>
+            <input type="checkbox" class="to-do__button" id="addTask">
             <input type="text" class="to-do__input" id="input" placeholder="Create a new to-do...">
         </section>
-        <!-- 
+
         <ul class="to-do__list">
-            <li>
-                <input type="radio" class="to-do__button" id="checkbox">
-                <span class="to-do__task" id="task"></span>
+            <li class="to-do__item">
+                <input type="checkbox" class="to-do__button" id="checkbox">
+                <span class="to-do__task" id="task">Jog around the park 3x</span>
+                <button type="button" class="to-do__clear-task" id="clearTask">
+                    <img src="./assets/images/icon-cross.svg" alt="Close icon" class="to-do__clear-task--icon">
+                </button>
+            </li>
+            <hr>
+
+            <li class="to-do__item">
+                <input type="checkbox" class="to-do__button" id="checkbox">
+                <span class="to-do__task" id="task">10 minutes meditation</span>
                 <button class="to-do__clear-task" id="clearTask">
                     <img src="./assets/images/icon-cross.svg" alt="Close icon" class="to-do__clear-task--icon">
                 </button>
-                <hr />
             </li>
+            <hr>
+
+
+            <li class="to-do__item">
+                <input type="checkbox" class="to-do__button" id="checkbox">
+                <span class="to-do__task" id="task">Read for 1 hour</span>
+                <button class="to-do__clear-task" id="clearTask">
+                    <img src="./assets/images/icon-cross.svg" alt="Close icon" class="to-do__clear-task--icon">
+                </button>
+            </li>
+            <hr>
+
+
+            <li class="to-do__item">
+                <input type="checkbox" class="to-do__button" id="checkbox">
+                <span class="to-do__task" id="task">Pick up groceries</span>
+                <button class="to-do__clear-task" id="clearTask">
+                    <img src="./assets/images/icon-cross.svg" alt="Close icon" class="to-do__clear-task--icon">
+                </button>
+            </li>
+            <hr>
+
+
+            <li class="to-do__item">
+                <input type="checkbox" class="to-do__button" id="checkbox">
+                <span class="to-do__task" id="task">Complete Todo App on Frontend Mentor</span>
+                <button class="to-do__clear-task" id="clearTask">
+                    <img src="./assets/images/icon-cross.svg" alt="Close icon" class="to-do__clear-task--icon">
+                </button>
+            </li>
+            <hr>
         </ul>
 
-        <section class="to-do__tools">
-            <div class="tools__set-one">
-                <span class="tools__task-count" id="taskCount"></span>
-                <button class="tools__clear-complete" id="clearComplete">Clear Completed</button>
-            </div>
-            <div class="tools__set-two">
-                <button type="button" class="tools__filter" id="filterAll">All</button>
-                <button type="button" class="tools__filter" id="filterActive">Active</button>
-                <button type="button" class="tools__filter" id="filterCompleted">Completed</button>
-            </div>
-        </section>
+            <section class="to-do__tools">
+                <div class="tools__set-one">
+                    <span class="tools__task-count" id="taskCount">Contagem</span>
+                    <button class="tools__clear-complete" id="clearComplete">Clear Completed</button>
+                </div>
+                <div class="tools__set-two">
+                    <button type="button" class="tools__filter" id="filterAll">All</button>
+                    <button type="button" class="tools__filter" id="filterActive">Active</button>
+                    <button type="button" class="tools__filter" id="filterCompleted">Completed</button>
+                </div>
+            </section>
 
     </main>
 
@@ -65,4 +102,4 @@
     </footer>
 </body>
 
-</html> -->
+</html>
