--- a/index.html
+++ b/index.html
@@ -35,6 +35,15 @@
 
         <ul class="to-do__list" id="toDoList">
             <li class="to-do__item" data-value="0">
+                <input type="checkbox" class="to-do__complete" id="complete" checked>
+                <span class="to-do__task" id="task">Complete online JavaScript course</span>
+                <button type="button" class="to-do__delete" id="exclude">
+                    <img src="./assets/images/icon-cross.svg" alt="Close icon" class="to-do__delete--icon">
+                </button>
+            </li>
+            <hr>
+
+            <li class="to-do__item" data-value="0">
                 <input type="checkbox" class="to-do__complete" id="complete">
                 <span class="to-do__task" id="task">Jog around the park 3x</span>
                 <button type="button" class="to-do__delete" id="exclude">
