--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </form>
 
         <ul class="to-do__list" id="toDoList">
-            <li class="to-do__item" data-value="0">
+            <li class="to-do__item" >
                 <input type="checkbox" class="to-do__complete" id="complete" checked>
                 <span class="to-do__task" id="task">Complete online JavaScript course</span>
                 <button type="button" class="to-do__delete" id="exclude">
@@ -43,7 +43,7 @@
             </li>
             <hr>
 
-            <li class="to-do__item" data-value="0">
+            <li class="to-do__item" >
                 <input type="checkbox" class="to-do__complete" id="complete">
                 <span class="to-do__task" id="task">Jog around the park 3x</span>
                 <button type="button" class="to-do__delete" id="exclude">
@@ -52,7 +52,7 @@
             </li>
             <hr>
 
-            <li class="to-do__item" data-value="1">
+            <li class="to-do__item" >
                 <input type="checkbox" class="to-do__complete" id="checkbox">
                 <span class="to-do__task" id="task">10 minutes meditation</span>
                 <button class="to-do__delete" id="clearTask">
@@ -62,7 +62,7 @@
             <hr>
 
 
-            <li class="to-do__item" data-value="2">
+            <li class="to-do__item" >
                 <input type="checkbox" class="to-do__complete" id="checkbox">
                 <span class="to-do__task" id="task">Read for 1 hour</span>
                 <button class="to-do__delete" id="clearTask">
@@ -72,7 +72,7 @@
             <hr>
 
 
-            <li class="to-do__item" data-value="3">
+            <li class="to-do__item" >
                 <input type="checkbox" class="to-do__complete" id="checkbox">
                 <span class="to-do__task" id="task">Pick up groceries</span>
                 <button class="to-do__delete" id="clearTask">
@@ -82,7 +82,7 @@
             <hr>
 
 
-            <li class="to-do__item" data-value="4">
+            <li class="to-do__item" >
                 <input type="checkbox" class="to-do__complete" id="checkbox">
                 <span class="to-do__task" id="task">Complete Todo App on Frontend Mentor</span>
                 <button class="to-do__delete" id="clearTask">
