--- a/index.html
+++ b/index.html
@@ -96,9 +96,9 @@
                 <button class="tools__clear-complete" id="clear-complete">Clear Completed</button>
             </div>
             <div class="tools__set-two">
-                <button type="button" class="tools__filter" id="filterAll">All</button>
-                <button type="button" class="tools__filter" id="filterActive">Active</button>
-                <button type="button" class="tools__filter" id="filterCompleted">Completed</button>
+                <button type="button" class="tools__filter" id="filter-all">All</button>
+                <button type="button" class="tools__filter" id="filter-active">Active</button>
+                <button type="button" class="tools__filter" id="filter-completed">Completed</button>
             </div>
         </section>
 
